--- a/www/views/about.html
+++ b/www/views/about.html
@@ -247,10 +247,10 @@
 			<div id="technicalgraphbottom"></div>
 		</div>
 	</div>
-</div>
-<div class="row">
-	<div id="technicalx" class="xtext">
-		Experience Level
+	<div class="row">
+		<div id="technicalx" class="xtext">
+			Experience Level
+		</div>
 	</div>
 </div>
 <div class="skillctahold row">
@@ -327,7 +327,7 @@
 <div class="row" id="workexamples">
 	<div id="viewingrow">
 		<div class="col-xs-2">
-			<div id="leftarrow"></div>
+			<div id="leftarrow" ng-click="prevImage();"></div>
 		</div>
 		<div class="col-xs-8">
 			<div class="viewingwork">
